# minfac

./: .gitignore  Cargo.toml  LICENSE  README.md  Releases.md  readme.md  types.toml
examples/: complete.rs  readme.md
examples/distributed_simple/: Cargo.toml
examples/distributed_simple/interface/: Cargo.toml
examples/distributed_simple/interface/src/: lib.rs
examples/distributed_simple/plugin/: Cargo.toml
examples/distributed_simple/plugin/src/: lib.rs
examples/distributed_simple/runtime/: Cargo.toml
examples/distributed_simple/runtime/src/: main.rs
examples/distributed_web/: Cargo.toml  PluginBasedArchitecture.md  readme.md
examples/distributed_web/raf-core/: Cargo.toml
examples/distributed_web/raf-core/src/: lib.rs
examples/distributed_web/raf-hosted-service/: Cargo.toml
examples/distributed_web/raf-hosted-service/src/: lib.rs
examples/distributed_web/raf-sql/: Cargo.toml
examples/distributed_web/raf-sql/src/: lib.rs  service.rs
examples/distributed_web/raf-web/: Cargo.toml
examples/distributed_web/raf-web/src/: body.rs  error_pages.rs  lib.rs
examples/distributed_web/raf-web/src/hosted_service/: error_pages.rs
examples/distributed_web/raf-web/src/service/: error_pages.rs  mod.rs
examples/distributed_web/runtime/: Cargo.toml
examples/distributed_web/runtime/src/: main.rs  platform.rs
examples/distributed_web/todo/: Cargo.toml
examples/distributed_web/todo/src/: lib.rs  repository.rs  web.rs
examples/interface/src/: lib.rs
examples/plugin/src/: lib.rs
examples/runtime/src/: main.rs
ioc-rs/: Cargo.toml  readme.md
ioc-rs/src/: builder.rs  gat.rs  lib.rs  playground.rs  ref_list.rs
src/: binary_search.rs  cycle_detection.rs  family_lifetime.rs  lib.rs  lifetime.rs  producer.rs  registrar.rs  resolvable.rs  service_provider.rs  service_provider_factory.rs  shared.rs  stable_abi.rs  strategy.rs  untyped.rs
src/ffi/: mod.rs  result.rs  str.rs  usize_iterator.rs
src/untyped/: arc_pointer.rs  dyn_pointer.rs  mod.rs  untyped_fn.rs
tests/: cycle_detection.rs  resolve.rs  test.rs
tests/compile_errors/: call_resolve_directly.rs  call_resolve_directly.stderr  use_singleton_after_drop.rs  use_singleton_after_drop.stderr  use_singleton_with_ref_after_drop.rs
