[package]
name = "minfac"
version = "0.0.1"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
description = "Lightweight Inversion Of Control"
repository = "https://github.com/mineichen/minfac"
keywords = ["ioc", "dependency-injection", "dynamic", "inversion-of-control", "di"]
categories = ["config"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
once_cell = {version = "1.5", features = []}

[features]
default = ["std"]
std = []