[package]
name = "minfac"
version = "0.0.1"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
description = "Lightweight Inversion Of Control"
repository = "https://github.com/mineichen/minfac"
keywords = ["ioc", "dependency-injection", "dynamic", "inversion-of-control", "di"]
categories = ["config"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
once_cell = { version = "1.5", features = []}
abi_stable = { version = "0.10", default-features = false, optional = true } 
fn_ffi = { path = "../fn_ffi" }

[features]
default = ["std"]
stable_abi = ["fn_ffi/abi_stable", "abi_stable" ]
std = []