[package]
name = "minfac"
version = "0.1.1"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
description = "Lightweight Inversion Of Control"
repository = "https://github.com/mineichen/minfac"
keywords = ["ioc", "dependency-injection", "dynamic", "inversion-of-control", "di"]
categories = ["config"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
abi_stable = { version = "0.11", default-features = false } 

[features]
default = ["std"] # Currently broken without std (dependency for abi_stable)
stable_abi = []
std = []
