[package]
name = "raf_sql"
version = "0.0.1"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
futures = "0.3"
ioc-rs = { path = "../../../" }
sqlx = { version = "0.5", features = ["sqlite" ] }
either = "1.6.1"

[features]
service = ["sqlx/runtime-tokio-rustls"]