[package]
name = "raf_web"
version = "0.0.1"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "1.0.1"
futures = "0.3"
minfac = { path = "../../../" }
raf_core = { path = "../raf-core" } 
hyper = { version = "0.14.8" }
reset-recognizer = "0.8.0"
http = "0.2"

[features]
service = ["hyper/full"]