[package]
name = "todo"
version = "0.1.0"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
futures = "0.3"
minfac = { path = "../../../" }
raf_web = { path = "../raf-web" } 
raf_sql = { path = "../raf-sql" }
raf_hosted_service = { path = "../raf-hosted-service" }
sqlx = { version = "0.5"}